Fixed text overflow

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -47,6 +47,10 @@
       a {
         text-decoration: none;
         color: $white;
+        max-width: 100px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
       }
 
       button {
